--- a/in/bibtex/charnets.bib
+++ b/in/bibtex/charnets.bib
@@ -1355,6 +1355,44 @@
   url       = {http://cup.columbia.edu/book/a-theory-of-narrative/9780231144285},
 }
 
+@InProceedings{Amaldi2009,
+  author    = {Amaldi, E. and Iuliano, C. and Jurkiewicz, T. and Mehlhorn, K. and Rizzi, R.},
+  title     = {Breaking the O(m^2 n) Barrier for Minimum Cycle Bases},
+  booktitle = {European Symposium on Algorithms},
+  year      = {2009},
+  volume    = {5757},
+  series    = {Lecture Notes in Computer Science},
+  pages     = {301-312},
+  publisher = {Springer},
+  doi       = {10.1007/978-3-642-04128-0_28},
+  owner     = {Vincent},
+  timestamp = {2023.03.23},
+}
+
+@InProceedings{Amaldi2010,
+  author    = {Amaldi, E. and Iuliano, C. and Rizzi, R.},
+  title     = {Efficient Deterministic Algorithms for Finding a Minimum Cycle Basis in Undirected Graphs},
+  booktitle = {International Conference on Integer Programming and Combinatorial Optimization},
+  year      = {2010},
+  volume    = {6080},
+  series    = {Lecture Notes in Computer Science},
+  pages     = {397-410},
+  publisher = {Springer},
+  doi       = {10.1007/978-3-642-13036-6_30},
+  owner     = {Vincent},
+  timestamp = {2023.03.23},
+}
+
+@TechReport{Amaldi2011,
+  author      = {Amaldi, E. and Iuliano, C. and Jurkiewicz, T. and Mehlhorn, K. and Rizzi, R.},
+  title       = {Improved minimum cycle bases algorithms by restriction to isometric cycles},
+  institution = {Politecnico di Milano},
+  year        = {2011},
+  owner       = {Vincent},
+  timestamp   = {2023.03.23},
+  url         = {https://people.mpi-inf.mpg.de/~mehlhorn/ftp/BarrierCycleBasisJournal.pdf},
+}
+
 @MastersThesis{Amalvy2020,
   author      = {Amalvy, A.},
   title       = {Natural Language Processing applied to Interactive Character Relationships Visualization in Novels},
@@ -1493,6 +1531,19 @@
   doi       = {10.1073/pnas.200327197},
   owner     = {Vincent},
   timestamp = {2011.12.16},
+}
+
+@Article{Amati2018,
+  author    = {Amati, V. and Lomi, A. and Mira, A.},
+  title     = {Social Network Modeling},
+  journal   = {Annual Review of Statistics and Its Application},
+  year      = {2018},
+  volume    = {5},
+  number    = {1},
+  pages     = {343-369},
+  doi       = {10.1146/annurev-statistics-031017-100746},
+  owner     = {Vincent},
+  timestamp = {2023.03.23},
 }
 
 @Article{Amati2019,
@@ -3181,6 +3232,18 @@
   doi       = {10.11588/IJODR.2018.2.42736},
   owner     = {Vincent},
   timestamp = {2022.06.22},
+}
+
+@Book{Barnes1972,
+  title     = {Social networks},
+  publisher = {Addison-Wesley},
+  year      = {1972},
+  author    = {Barnes, J. A.},
+  volume    = {26},
+  series    = {Module in Anthropology},
+  owner     = {Vincent},
+  timestamp = {2023.03.23},
+  url       = {https://www.worldcat.org/fr/title/social-networks/oclc/533499},
 }
 
 @Article{Barnett1948,
@@ -7619,6 +7682,18 @@
 
 @Article{Butts2008,
   author    = {Butts, C. T.},
+  title     = {{network}: a Package for Managing Relational Data in R},
+  journal   = {Journal of Statistical Software},
+  year      = {2008},
+  volume    = {24},
+  number    = {2},
+  owner     = {Vincent},
+  timestamp = {2010.06.03},
+  url       = {http://www.jstatsoft.org/v24/i02/},
+}
+
+@Article{Butts2008a,
+  author    = {Butts, C. T.},
   title     = {A Relational Event Framework for Social Action},
   journal   = {Sociological Methodology},
   year      = {2008},
@@ -8371,6 +8446,18 @@
   doi       = {10.1353/chl.0.0017},
   owner     = {Vincent},
   timestamp = {2022.07.02},
+}
+
+@Article{Catrina2021,
+  author    = {Catrina, F. and Khan, R. and Moorman, I. and Ostrovskii, M. and Chandra Vidyasagar, L. I.},
+  title     = {Quantitative characteristics of cycles and their relations with stretch and spanning tree congestion},
+  journal   = {arXiv},
+  year      = {2021},
+  volume    = {math.CO},
+  pages     = {2104.07872},
+  owner     = {Vincent},
+  timestamp = {2023.03.23},
+  url       = {https://arxiv.org/abs/2104.07872},
 }
 
 @Article{Cattrysse1992,
@@ -10368,6 +10455,29 @@
   url       = {https://dl.acm.org/citation.cfm?id=2078186},
 }
 
+@Article{ColomerdeSimn2013,
+  author    = {Colomer-de-Simón, P. and Serrano, M. Á. and Beiró, M. G. and Alvarez-Hamelin, J. I. and Boguñá , M.},
+  title     = {Deciphering the global organization of clustering in real complex networks},
+  journal   = {Scientific Reports},
+  year      = {2013},
+  volume    = {3},
+  doi       = {10.1038/srep02517},
+  owner     = {Vincent},
+  timestamp = {2023.03.23},
+}
+
+@Article{Colomer-de-Simon2014,
+  author    = {Colomer-de-Simón, P. and Boguñá, M.},
+  title     = {Double Percolation Phase Transition in Clustered Complex Networks},
+  journal   = {Physical Review X},
+  year      = {2014},
+  volume    = {4},
+  number    = {4},
+  doi       = {10.1103/physrevx.4.041020},
+  owner     = {Vincent},
+  timestamp = {2023.03.23},
+}
+
 @Book{Comay2001,
   title     = {Who's Who in the Old Testament},
   publisher = {Routledge},
@@ -11224,6 +11334,16 @@
   timestamp = {2023.01.09},
 }
 
+@Book{Cunningham2016,
+  title     = {Understanding dark networks: A strategic framework for the use of social network analysis},
+  publisher = {Rowman \& Littlefield},
+  year      = {2016},
+  author    = {Cunningham, D. and Everton, S. and Murphy, P.},
+  owner     = {Vincent},
+  timestamp = {2023.03.23},
+  url       = {2016.},
+}
+
 @Article{Cureu2013,
   author    = {Curşeu, P. L. and Pluut, H.},
   title     = {Student groups as learning entities: The effect of group diversity and teamwork quality on groups' cognitive complexity},
@@ -11763,6 +11883,19 @@
   doi       = {10.1016/0304-422x(84)90027-5},
   owner     = {Vincent},
   timestamp = {2022.08.31},
+}
+
+@InCollection{David1996,
+  author    = {David, A. and Kemp, R. and Smith, L. and Fahy, T.},
+  title     = {Split minds: Multiple personality and schizophrenia},
+  booktitle = {Method in Madness: Case Studies in Cognitive Neuropsychiatry},
+  publisher = {Psychology Press},
+  year      = {1996},
+  chapter   = {7},
+  pages     = {122-146},
+  owner     = {Vincent},
+  timestamp = {2023.03.23},
+  url       = {https://books.google.fr/books?id=sSoVAgAAQBAJ},
 }
 
 @Article{Davidsen2002,
@@ -15259,9 +15392,11 @@
 @Article{Everton2019,
   author    = {Everton, S. and Everton, T. and Green, A. and Hamblin, C. and Schroeder, R.},
   title     = {Strong Ties and Where to Find Them: Or, Why Neville (and Ginny and Seamus) and Bellatrix (and Lucius) Might Be More Important than Harry and Tom},
-  journal   = {Social Science Research Network},
-  year      = {2019},
-  doi       = {10.2139/ssrn.3389503},
+  journal   = {Social Network Analysis and Mining},
+  year      = {2022},
+  volume    = {12},
+  pages     = {112},
+  doi       = {10.1007/s13278-022-00947-z},
   owner     = {Vincent},
   timestamp = {2020.07.23},
 }
@@ -15774,6 +15909,20 @@
   doi       = {10.2307/468395},
   owner     = {Vincent},
   timestamp = {2019.04.12},
+}
+
+@InProceedings{Ferreira2014,
+  author    = {Ferreira, R. and Grossi, R. and Rizzi, R. and Sacomoto, G. and Sagot, M.-F.},
+  title     = {Amortized O(|V|)-Delay Algorithm for Listing Chordless Cycles in Undirected Graphs},
+  booktitle = {European Symposium on Algorithms},
+  year      = {2014},
+  volume    = {8737},
+  series    = {Lecture Notes in Computer Science},
+  pages     = {418-429},
+  publisher = {Springer},
+  doi       = {10.1007/978-3-662-44777-2_35},
+  owner     = {Vincent},
+  timestamp = {2023.03.23},
 }
 
 @InProceedings{Ferrer2021,
@@ -17218,6 +17367,7 @@
   organization = {Evelina Gabasova's Blog},
   url          = {http://evelinag.com/blog/2016/01-25-social-network-force-awakens/index.html},
   owner        = {Vincent},
+  review       = {data: https://doi.org/10.5281/zenodo.1411479},
   timestamp    = {2016.02.23},
 }
 
@@ -17735,6 +17885,32 @@
   doi       = {10.1023/a:1018981505752},
   owner     = {Vincent},
   timestamp = {2019.03.27},
+}
+
+@Article{Gashler2011,
+  author    = {Gashler, M.},
+  title     = {Waffles: A machine learning toolkit},
+  journal   = {Journal of Machine Learning Research},
+  year      = {2011},
+  volume    = {12},
+  number    = {69},
+  pages     = {2383-2387},
+  owner     = {Vincent},
+  timestamp = {2023.03.23},
+  url       = {https://www.jmlr.org/papers/v12/gashler11a.html},
+}
+
+@Article{Gashler2012,
+  author    = {Gashler, M. and Martinez, T.},
+  title     = {Robust manifold learning with {CycleCut}},
+  journal   = {Connection Science},
+  year      = {2012},
+  volume    = {24},
+  number    = {1},
+  pages     = {57-69},
+  doi       = {10.1080/09540091.2012.664122},
+  owner     = {Vincent},
+  timestamp = {2023.03.23},
 }
 
 @Book{Gaskill1991,
@@ -20611,6 +20787,18 @@
   timestamp = {2020.11.30},
 }
 
+@Article{Handcock2008,
+  author    = {Handcock, M. S. and Hunter, D. R. and Butts, C. T. and Goodreau, S. M. and Morris, M.},
+  title     = {statnet: Software Tools for the Representation, Visualization, Analysis and Simulation of Network Data},
+  journal   = {Journal of Statistical Software},
+  year      = {2008},
+  volume    = {24},
+  number    = {1},
+  owner     = {Vincent},
+  timestamp = {2010.06.03},
+  url       = {http://www.jstatsoft.org/v24/i01},
+}
+
 @Article{Hanjalic1999,
   author    = {Hanjalic, A. and Lagendijk, R. L. and Biemond, J.},
   title     = {Automated high-level movie segmentation for advanced video-retrieval systems},
@@ -22564,6 +22752,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2019.06.24},
 }
 
+@Article{Horton1987,
+  author    = {Horton, J. D.},
+  title     = {A Polynomial-Time Algorithm to Find the Shortest Cycle Basis of a Graph},
+  journal   = {SIAM Journal on Computing},
+  year      = {1987},
+  volume    = {16},
+  number    = {2},
+  pages     = {358-366},
+  doi       = {10.1137/0216026},
+  owner     = {Vincent},
+  timestamp = {2023.03.23},
+}
+
 @Book{Horton1999,
   title     = {Writing the Character-Centered Screenplay},
   publisher = {University of California Press},
@@ -23043,6 +23244,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2019.04.11},
 }
 
+@Article{Hummel2012,
+  author    = {Hummel, R. M. and Hunter, D. R. and Handcock, M. S.},
+  title     = {Improving Simulation-Based Algorithms for Fitting {ERGMs}},
+  journal   = {Journal of Computational and Graphical Statistics},
+  year      = {2012},
+  volume    = {21},
+  number    = {4},
+  pages     = {920-939},
+  doi       = {10.1080/10618600.2012.679224},
+  owner     = {Vincent},
+  timestamp = {2023.03.23},
+}
+
 @Article{Hummon2003,
   author    = {Hummon, N. P. and Doreian, P.},
   title     = {Some dynamics of social balance processes: bringing Heider back into balance theory},
@@ -23123,6 +23337,18 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   owner     = {Vincent},
   timestamp = {2019.04.06},
   url       = {https://books.google.fr/books?id=1TVaAAAAMAAJ},
+}
+
+@Article{Hunter2008,
+  author    = {Hunter, D. R. and Handcock, M. S. and Butts, C. T. and Goodreau, S. M. and Morris, M.},
+  title     = {ergm: A Package to Fit, Simulate and Diagnose Exponential-Family Models for Networks},
+  journal   = {Journal of Statistical Software},
+  year      = {2008},
+  volume    = {24},
+  number    = {3},
+  owner     = {Vincent},
+  timestamp = {2010.06.03},
+  url       = {https://www.jstatsoft.org/article/view/v024i03},
 }
 
 @Article{Hunter2014,
@@ -25172,6 +25398,16 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2020.03.16},
 }
 
+@Book{Kapferer1972,
+  title     = {Strategy and transaction in an African factory: African workers and Indian management in a Zambian town},
+  publisher = {Manchester University Press},
+  year      = {1972},
+  author    = {Kapferer, B.},
+  owner     = {Vincent},
+  timestamp = {2023.03.23},
+  url       = {https://books.google.fr/books/?id=5d2yAAAAIAAJ},
+}
+
 @Book{Kaplan1983,
   title     = {Women and Film: Both Sides of the Camera},
   publisher = {Methuen},
@@ -26448,6 +26684,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2010.06.03},
 }
 
+@Article{Klemm2006,
+  author    = {Klemm, K. and Stadler, P. F.},
+  title     = {Statistics of cycles in large networks},
+  journal   = {Physical Review E},
+  year      = {2006},
+  volume    = {73},
+  number    = {2},
+  pages     = {025101(R)},
+  doi       = {10.1103/physreve.73.025101},
+  owner     = {Vincent},
+  timestamp = {2023.03.23},
+}
+
 @InProceedings{Klenner2011,
   author    = {Klenner, M. and Tuggener, D.},
   title     = {An Incremental Entitymention Model for Coreference Resolution with Restrictive Antecedent Accessibility},
@@ -26990,6 +27239,18 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2010.08.05},
 }
 
+@InCollection{Koskinen2012,
+  author    = {Koskinen, J. and Daraganova, G.},
+  title     = {Exponential Random Graph Model Fundamentals},
+  booktitle = {Exponential Random Graph Models for Social Networks},
+  publisher = {Cambridge University Press},
+  year      = {2012},
+  pages     = {49-76},
+  doi       = {10.1017/cbo9780511894701.008},
+  owner     = {Vincent},
+  timestamp = {2023.03.23},
+}
+
 @InCollection{Koskinen2016,
   author    = {Koskinen, U.},
   title     = {The Story of Aggressive and Violent Peasant Elites in the North},
@@ -27001,6 +27262,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1007/978-3-319-40688-6_1},
   owner     = {Vincent},
   timestamp = {2019.08.18},
+}
+
+@Book{Koskinen2020,
+  title     = {Exponential Random Graph Modelling},
+  publisher = {SAGE Publications Ltd},
+  year      = {2020},
+  author    = {Koskinen, J.},
+  series    = {SAGE Research Methods Foundations},
+  doi       = {10.4135/9781526421036888175},
+  owner     = {Vincent},
+  timestamp = {2023.03.23},
 }
 
 @Article{Kossinets2006,
@@ -27362,6 +27634,18 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   owner     = {Vincent},
   timestamp = {2019.04.06},
   url       = {https://www.macmillanexplorers.com/romeo-and-juliet-love-hatred-in-the-couple-le-couple-amour-haine/15561582},
+}
+
+@Article{Krivitsky2023,
+  author    = {Krivitsky, P. N. and Hunter, D. R. and Morris, M. and Klumb, C.},
+  title     = {{ergm 4}: New Features for Analyzing Exponential-Family Random Graph Models},
+  journal   = {Journal of Statistical Software},
+  year      = {2023},
+  volume    = {105},
+  number    = {6},
+  doi       = {10.18637/jss.v105.i06},
+  owner     = {Vincent},
+  timestamp = {2023.03.23},
 }
 
 @InProceedings{Krstajic2012,
@@ -28641,6 +28925,29 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1017/s1351324911000313},
   owner     = {Vincent},
   timestamp = {2019.04.10},
+}
+
+@Article{Lazega1999,
+  author    = {Lazega, E. and Pattison, P. E.},
+  title     = {Multiplexity, generalized exchange and cooperation in organizations: a case study},
+  journal   = {Social Networks},
+  year      = {1999},
+  volume    = {21},
+  number    = {1},
+  pages     = {67-90},
+  doi       = {10.1016/s0378-8733(99)00002-7},
+  owner     = {Vincent},
+  timestamp = {2023.03.23},
+}
+
+@Book{Lazega2001,
+  title     = {The Collegial Phenomenon: The social mechanisms of cooperation among peers in a corporate law partnership},
+  publisher = {Oxford University Press},
+  year      = {2001},
+  author    = {Lazega, E.},
+  doi       = {10.1093/acprof:oso/9780199242726.001.0001},
+  owner     = {Vincent},
+  timestamp = {2023.03.23},
 }
 
 @Article{Lazer2009,
@@ -30197,6 +30504,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url       = {https://www.ijcai.org/proceedings/2018/0584.pdf},
 }
 
+@Article{Li2018a,
+  author    = {Li, Y. and Shi, L.},
+  title     = {Geodesic cycles in random graphs},
+  journal   = {Discrete Mathematics},
+  year      = {2018},
+  volume    = {341},
+  number    = {5},
+  pages     = {1275-1281},
+  doi       = {10.1016/j.disc.2018.01.014},
+  owner     = {Vincent},
+  timestamp = {2023.03.23},
+}
+
 @Article{Li2018h,
   author    = {Li, J. and Yang, D. and Lv, P.},
   title     = {Visualize classic play's composing patterns: a weighted motif mining framework},
@@ -31130,6 +31450,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2020.08.14},
 }
 
+@Article{Lokshtanov2009,
+  author    = {Lokshtanov, D.},
+  title     = {Finding the longest isometric cycle in a graph},
+  journal   = {Discrete Applied Mathematics},
+  year      = {2009},
+  volume    = {157},
+  number    = {12},
+  pages     = {2670-2674},
+  doi       = {10.1016/j.dam.2008.08.008},
+  owner     = {Vincent},
+  timestamp = {2023.03.23},
+}
+
 @InProceedings{Lombardo2015,
   author    = {Lombardo, V. and Pizzo, A.},
   title     = {The visualisation of drama hierarchies},
@@ -31598,6 +31931,16 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   owner     = {Vincent},
   timestamp = {2019.03.12},
   url       = {https://hal.archives-ouvertes.fr/hal-00944427/},
+}
+
+@Book{Lusher2012,
+  title     = {Exponential Random Graph Models for Social Networks},
+  publisher = {Cambridge University Press},
+  year      = {2012},
+  author    = {Lusher, D. and Koskinen, J. and Robins, G.},
+  doi       = {10.1017/cbo9780511894701},
+  owner     = {Vincent},
+  timestamp = {2023.03.23},
 }
 
 @Article{Lusseau2003,
@@ -32140,6 +32483,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1145/2808797.2809322},
   owner     = {Vincent},
   timestamp = {2017.03.14},
+}
+
+@Article{Mahadevan2006,
+  author    = {Mahadevan, P. and Krioukov, D. and Fall, K. and Vahdat, A.},
+  title     = {Systematic topology analysis and generation using degree correlations},
+  journal   = {ACM SIGCOMM Computer Communication Review},
+  year      = {2006},
+  volume    = {36},
+  number    = {4},
+  pages     = {135-146},
+  doi       = {10.1145/1151659.1159930},
+  owner     = {Vincent},
+  timestamp = {2023.03.23},
 }
 
 @Article{Mahlberg2012,
@@ -32924,6 +33280,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2020.10.30},
 }
 
+@Article{Martin2017,
+  author    = {Martin, J. L.},
+  title     = {The Structure of Node and Edge Generation in a Delusional Social Network},
+  journal   = {Journal of Social Structure},
+  year      = {2017},
+  volume    = {18},
+  number    = {1},
+  pages     = {1-22},
+  doi       = {10.21307/joss-2018-005},
+  owner     = {Vincent},
+  timestamp = {2023.03.23},
+}
+
 @InProceedings{Martin2018,
   author    = {Martin, L. J. and Ammanabrolu, P. and Wang, X. and Hancock, W. and Singh, S. and Harrison, B. and Riedl, M. O.},
   title     = {Event Representations for Automated Story Generation with Deep Neural Nets},
@@ -32932,6 +33301,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   owner     = {Vincent},
   timestamp = {2020.03.16},
   url       = {https://www.aaai.org/ocs/index.php/AAAI/AAAI18/paper/viewPaper/17046},
+}
+
+@Article{Martin2020,
+  author    = {Martin, J. L.},
+  title     = {Comment on Geodesic Cycle Length Distributions in Delusional and Other Social Networks},
+  journal   = {Journal of Social Structure},
+  year      = {2020},
+  volume    = {21},
+  number    = {1},
+  pages     = {77-93},
+  doi       = {10.21307/joss-2020-003},
+  owner     = {Vincent},
+  timestamp = {2023.03.23},
 }
 
 @InProceedings{Martinez-Ortiz2015,
@@ -33128,6 +33510,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1007/s13278-019-0577-7},
   owner     = {Vincent},
   timestamp = {2021.09.02},
+}
+
+@Article{Mastrandrea2015,
+  author    = {Mastrandrea, R. and Fournet, J. and Barrat, A.},
+  title     = {Contact Patterns in a High School: A Comparison between Data Collected Using Wearable Sensors, Contact Diaries and Friendship Surveys},
+  journal   = {PLoS ONE},
+  year      = {2015},
+  volume    = {10},
+  number    = {9},
+  pages     = {e0136497},
+  doi       = {10.1371/journal.pone.0136497},
+  owner     = {Vincent},
+  timestamp = {2023.03.23},
 }
 
 @Article{Mastro2003,
@@ -33714,10 +34109,11 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   journal   = {Journal of Social Structure},
   year      = {2011},
   volume    = {12},
-  pages     = {3},
+  number    = {1},
+  pages     = {1-37},
+  doi       = {10.21307/joss-2019-031},
   owner     = {Vincent},
   timestamp = {2015.09.24},
-  url       = {https://www.cmu.edu/joss/content/articles/volume12//McCullohCarley.pdf},
 }
 
 @Book{McCulloh2013,
@@ -34838,6 +35234,18 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1145/1298306.1298311},
   owner     = {Vincent},
   timestamp = {2011.07.19},
+}
+
+@Article{Mitchell1974,
+  author    = {Mitchell, J. C.},
+  title     = {Social Networks},
+  journal   = {Annual Review of Anthropology},
+  year      = {1974},
+  volume    = {3},
+  pages     = {279-299},
+  doi       = {10.1146/annurev.an.03.100174.001431},
+  owner     = {Vincent},
+  timestamp = {2023.03.23},
 }
 
 @Book{Mitchell1983,
@@ -36744,6 +37152,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2019.03.28},
 }
 
+@Article{Negami1986,
+  author    = {Negami, S. and Xu, G.-H.},
+  title     = {Locally geodesic cycles in 2-self-centered graphs},
+  journal   = {Discrete Mathematics},
+  year      = {1986},
+  volume    = {58},
+  number    = {3},
+  pages     = {263-268},
+  doi       = {10.1016/0012-365x(86)90143-3},
+  owner     = {Vincent},
+  timestamp = {2023.03.23},
+}
+
 @InProceedings{Nelken2006,
   author    = {Nelken, Rani and Shieber, S.},
   title     = {Towards Robust Context-Sensitive Sentence Alignment for Monolingual Corpora},
@@ -38254,6 +38675,18 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.3115/1117822.1117834},
   owner     = {Vincent},
   timestamp = {2019.04.08},
+}
+
+@Article{Orsini2015,
+  author    = {Orsini, C. and Dankulov, M. M. and Colomer-de-Simón, P. and Jamakovic, A. and Mahadevan, P. and Vahdat, A. and Bassler, K. E. and Toroczkai, A. and Boguñá, M. and Caldarelli, G. and Fortunato, S. and Krioukov, D.},
+  title     = {Quantifying randomness in real networks},
+  journal   = {Nature Communications},
+  year      = {2015},
+  volume    = {6},
+  pages     = {8627},
+  doi       = {10.1038/ncomms9627},
+  owner     = {Vincent},
+  timestamp = {2023.03.23},
 }
 
 @Article{Ortiz2007,
@@ -46474,6 +46907,30 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2022.07.09},
 }
 
+@Article{SilvaDias2013,
+  author    = {Silva Dias, E. and Castonguay, D. and Longo, H. and Rfaei Jradi, W. A.},
+  title     = {Efficient Enumeration of Chordless Cycles},
+  journal   = {arXiv},
+  year      = {2013},
+  volume    = {cs.DS},
+  pages     = {1309.1051},
+  owner     = {Vincent},
+  timestamp = {2023.03.23},
+  url       = {https://arxiv.org/abs/1309.1051},
+}
+
+@Article{SilvaDias2014,
+  author    = {Silva Dias, E. and Castonguay, D. and Longo, H. and Rfaei Jradi, W. A. and do Nascimento, H. A. D.},
+  title     = {A GPU-based parallel algorithm for enumerating all chordless cycles in graphs},
+  journal   = {arXiv},
+  year      = {2014},
+  volume    = {cs.DC},
+  pages     = {1410.4876},
+  owner     = {Vincent},
+  timestamp = {2023.03.23},
+  url       = {https://arxiv.org/abs/1410.4876},
+}
+
 @Book{Silverman2018,
   title     = {Density estimation for statistics and data analysis},
   publisher = {Routledge},
@@ -47174,6 +47631,20 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   owner     = {Vincent},
   timestamp = {2020.12.15},
   url       = {https://dl.acm.org/doi/10.5555/2999611.2999715},
+}
+
+@InProceedings{Sokhn2013,
+  author    = {Sokhn, N. and Baltensperger, R. and Bersier, L.-F. and Hennebert, J. and Ultes-Nitsche, U.},
+  title     = {Identification of Chordless Cycles in Ecological Networks},
+  booktitle = {International Conference on Complex Sciences},
+  year      = {2013},
+  volume    = {126},
+  series    = {Lecture Notes of the Institute for Computer Sciences, Social Informatics and Telecommunications Engineering},
+  pages     = {316-324},
+  publisher = {Springer International Publishing},
+  doi       = {10.1007/978-3-319-03473-7_28},
+  owner     = {Vincent},
+  timestamp = {2023.03.23},
 }
 
 @Article{Sol2010,
@@ -48079,6 +48550,44 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.19030/jber.v6i11.2488},
   owner     = {Vincent},
   timestamp = {2021.12.27},
+}
+
+@Article{Stivala2020,
+  author    = {Stivala, A.},
+  title     = {Geodesic Cycle Length Distributions in Delusional and Other Social Networks},
+  journal   = {Journal of Social Structure},
+  year      = {2020},
+  volume    = {21},
+  number    = {1},
+  pages     = {35-76},
+  doi       = {10.21307/joss-2020-002},
+  owner     = {Vincent},
+  timestamp = {2023.03.23},
+}
+
+@Article{Stivala2020a,
+  author    = {Stivala, A.},
+  title     = {Reply to ``Comment on Geodesic Cycle Length Distributions in Delusional and Other Social Networks''},
+  journal   = {Journal of Social Structure},
+  year      = {2020},
+  volume    = {21},
+  number    = {1},
+  pages     = {94-106},
+  doi       = {10.21307/joss-2020-004},
+  owner     = {Vincent},
+  timestamp = {2023.03.23},
+}
+
+@Article{Stivala2023,
+  author    = {Stivala, A.},
+  title     = {Geodesic cycle length distributions in fictional character networks},
+  journal   = {arXiv},
+  year      = {2023},
+  volume    = {cs.SI},
+  pages     = {2303.11597},
+  owner     = {Vincent},
+  timestamp = {2023.03.23},
+  url       = {https://arxiv.org/abs/2303.11597},
 }
 
 @Electronic{Stoltzman2016,
@@ -50881,6 +51390,20 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url       = {https://press.uchicago.edu/ucp/books/book/chicago/D/bo35853783.html},
 }
 
+@InProceedings{Uno2014,
+  author    = {Uno, T. and Satoh, H.},
+  title     = {An Efficient Algorithm for Enumerating Chordless Cycles and Chordless Paths},
+  booktitle = {International Conference on Discovery Science},
+  year      = {2014},
+  volume    = {8777},
+  series    = {Lecture Notes in Computer Science},
+  pages     = {313-324},
+  publisher = {Springer},
+  doi       = {10.1007/978-3-319-11812-3_27},
+  owner     = {Vincent},
+  timestamp = {2023.03.23},
+}
+
 @MastersThesis{Urbanova2021,
   author    = {Urbanová , Z.},
   title     = {Quote Attribution and Character Networks in Novels},
@@ -52495,6 +53018,18 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url       = {https://www.elsevier.com/books/visual-thinking/ware/978-0-12-370896-0},
 }
 
+@Article{Wasa2016,
+  author    = {Wasa, K.},
+  title     = {Enumeration of Enumeration Algorithms},
+  journal   = {arXiv},
+  year      = {2016},
+  volume    = {cs.DS},
+  pages     = {1605.05102},
+  owner     = {Vincent},
+  timestamp = {2023.03.23},
+  url       = {https://arxiv.org/abs/1605.05102},
+}
+
 @Book{Wasserman1994,
   title     = {Social Network Analysis: Methods and Applications},
   publisher = {Cambridge University Press},
@@ -53120,6 +53655,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2023.03.17},
 }
 
+@Book{Wickham2009,
+  title     = {{ggplot2}: Elegant Graphics for Data Analysis},
+  publisher = {Springer},
+  year      = {2009},
+  author    = {Wickham, H.},
+  series    = {Use R!},
+  doi       = {10.1007/978-0-387-98141-3},
+  owner     = {Vincent},
+  timestamp = {2023.03.23},
+}
+
 @InProceedings{Wiebe1990,
   author    = {Wiebe, J. M.},
   title     = {Identifying subjective characters in narrative},
@@ -53179,6 +53725,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1371/journal.pone.0013701},
   owner     = {Vincent},
   timestamp = {2023.03.18},
+}
+
+@Article{Wild2008,
+  author    = {Wild, M.},
+  title     = {Generating all cycles, chordless cycles, and Hamiltonian cycles with the principle of exclusion},
+  journal   = {Journal of Discrete Algorithms},
+  year      = {2008},
+  volume    = {6},
+  number    = {1},
+  pages     = {93-102},
+  doi       = {10.1016/j.jda.2007.01.005},
+  owner     = {Vincent},
+  timestamp = {2023.03.23},
 }
 
 @Article{Wilde2019,
