--- a/in/bibtex/charnets.bib
+++ b/in/bibtex/charnets.bib
@@ -4040,6 +4040,17 @@
   url       = {https://www.routledge.com/Salons-History-and-the-Creation-of-Seventeenth-Century-France-Mastering/Beasley/p/book/9780754653547},
 }
 
+@InCollection{Beaty2018,
+  author    = {Beaty, B. and Sousanis, N. and Woo, B.},
+  title     = {Two Per Cent of What? Constructing a Corpus of Typical American Comic Books},
+  booktitle = {Empirical Comics Research: Digital, Cognitive, and Multimodal Methods},
+  publisher = {Routledge},
+  year      = {2018},
+  doi       = {10.4324/9781315185354-2},
+  owner     = {Vincent},
+  timestamp = {2023.08.08},
+}
+
 @Article{Beauchamp1965,
   author    = {Beauchamp, M. A.},
   title     = {An improved index of centrality},
@@ -13474,6 +13485,19 @@
   timestamp = {2020.08.13},
 }
 
+@Article{Douglas1973,
+  author    = {Douglas, D. H. and Peucker, T. K.},
+  title     = {Algorithms for the Reduction of the Number of Points Required to Represent a Digitized Line or its Caricature},
+  journal   = {Cartographica},
+  year      = {1973},
+  volume    = {10},
+  number    = {2},
+  pages     = {112-122},
+  doi       = {10.3138/fm57-6770-u75u-7727},
+  owner     = {Vincent},
+  timestamp = {2023.08.08},
+}
+
 @Article{Douze2010,
   author    = {Douze, M. and Jegou, H. and Schmid, C.},
   title     = {An Image-Based Approach to Video Copy Detection With Spatio-Temporal Post-Filtering},
@@ -14183,7 +14207,7 @@
   publisher = {Routledge},
   year      = {2018},
   pages     = {43-61},
-  doi       = {10.4324/9781315185354},
+  doi       = {10.4324/9781315185354-3},
   owner     = {Vincent},
   timestamp = {2023.08.07},
 }
@@ -24133,6 +24157,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2018.02.15},
 }
 
+@InProceedings{Iyyer2017,
+  author    = {Iyyer, M. and Manjunatha, V. and Guha, A. and Vyas, Y. and Boyd-Graber, J. and Daume, H. and Davis, L.},
+  title     = {The Amazing Mysteries of the Gutter: Drawing Inferences Between Panels in Comic Book Narratives},
+  booktitle = {IEEE Conference on Computer Vision and Pattern Recognition},
+  year      = {2017},
+  pages     = {6478-6487},
+  doi       = {10.1109/cvpr.2017.686},
+  owner     = {Vincent},
+  timestamp = {2023.08.08},
+}
+
 @Article{Jaccard1912,
   author    = {Jaccard, P.},
   title     = {The distribution of the flora in the alpine zone},
@@ -28267,6 +28302,18 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1006/anbe.2001.1808},
   owner     = {Vincent},
   timestamp = {2019.04.06},
+}
+
+@Article{Kuemmerer2017,
+  author    = {Kümmerer, M. and Wallis, T. and Bethge, M.},
+  title     = {{DeepGaze} {II}: Predicting fixations from deep features over time and tasks},
+  journal   = {Journal of Vision},
+  year      = {2017},
+  volume    = {17},
+  pages     = {1147},
+  doi       = {10.1167/17.10.1147},
+  owner     = {Vincent},
+  timestamp = {2023.08.08},
 }
 
 @Article{Kuhn1955,
@@ -39431,6 +39478,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2022.06.28},
 }
 
+@Article{Otsu1979,
+  author    = {Otsu, N.},
+  title     = {A Threshold Selection Method from Gray-Level Histograms},
+  journal   = {IEEE Transactions on Systems, Man, and Cybernetics},
+  year      = {1979},
+  volume    = {9},
+  number    = {1},
+  pages     = {62-66},
+  doi       = {10.1109/tsmc.1979.4310076},
+  owner     = {Vincent},
+  timestamp = {2023.08.08},
+}
+
 @Article{Otsuka2005,
   author    = {Otsuka, I. and Nakane, K. and Divakaran, A. and Hatanaka, K. and Ogawa, M.},
   title     = {A highlight scene detection and video summarization system using audio feature for a personal video recorder},
@@ -42363,6 +42423,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2021.12.27},
 }
 
+@Article{Ramer1972,
+  author    = {Ramer, U.},
+  title     = {An iterative procedure for the polygonal approximation of plane curves},
+  journal   = {Computer Graphics and Image Processing},
+  year      = {1972},
+  volume    = {1},
+  number    = {3},
+  pages     = {244-256},
+  doi       = {10.1016/s0146-664x(72)80017-0},
+  owner     = {Vincent},
+  timestamp = {2023.08.08},
+}
+
 @Article{Ramirez-Arellano2020,
   author    = {Ramirez-Arellano, A.},
   title     = {Classification of Literary Works: Fractality and Complexity of the Narrative, Essay, and Research Article},
@@ -43684,7 +43757,7 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
 @InCollection{Rigaud2018,
   author    = {Rigaud, C. and Burie, J.-C.},
   title     = {Computer Vision Applied to Comic Book Images: Digital, Multimodal, and Cognitive Methods},
-  booktitle = {Empirical Comics Research},
+  booktitle = {Empirical Comics Research: Digital, Cognitive, and Multimodal Methods},
   publisher = {Routledge},
   year      = {2018},
   doi       = {10.4324/9781315185354-6},
@@ -48089,6 +48162,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.3366/jbctv.2006.3.1.82},
   owner     = {Vincent},
   timestamp = {2022.11.28},
+}
+
+@InProceedings{Smith2007,
+  author    = {Smith, R.},
+  title     = {An Overview of the Tesseract {OCR} Engine},
+  booktitle = {9th International Conference on Document Analysis and Recognition},
+  year      = {2007},
+  pages     = {629-633},
+  doi       = {10.1109/icdar.2007.4376991},
+  owner     = {Vincent},
+  timestamp = {2023.08.08},
 }
 
 @InCollection{Smith2007a,
