--- a/in/bibtex/charnets.bib
+++ b/in/bibtex/charnets.bib
@@ -3663,6 +3663,18 @@
   timestamp = {2022.08.31},
 }
 
+@InCollection{Basu2018,
+  author    = {Basu, A.},
+  title     = {Form and Computation: A Case Study},
+  booktitle = {Digital Milton},
+  publisher = {Springer},
+  year      = {2018},
+  pages     = {111-128},
+  doi       = {10.1007/978-3-319-90478-8_5},
+  owner     = {Vincent},
+  timestamp = {2023.08.09},
+}
+
 @Article{Batagelj1998,
   author    = {Batagelj, V. and Mrvar, A.},
   title     = {Pajek - Program for large network analysis},
@@ -28353,6 +28365,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url       = {https://www.lhn.uni-hamburg.de/},
 }
 
+@Article{Kukkonen2020,
+  author    = {Kukkonen, K.},
+  title     = {The speed of plot: Narrative acceleration and deceleration},
+  journal   = {Orbis Litterarum},
+  year      = {2020},
+  volume    = {75},
+  number    = {2},
+  pages     = {73-85},
+  doi       = {10.1111/oli.12251},
+  owner     = {Vincent},
+  timestamp = {2023.08.09},
+}
+
 @InProceedings{Kukleva2020,
   author    = {Kukleva, A. and Tapaswi, M. and Laptev, I.},
   title     = {Learning Interactions and Relationships Between Movie Characters},
@@ -50820,6 +50845,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1353/nlh.2018.0005},
   owner     = {Vincent},
   timestamp = {2020.12.01},
+}
+
+@Article{Tenen2022,
+  author    = {Tenen, D. Y.},
+  title     = {Distributed Agency in the Novel},
+  journal   = {New Literary History},
+  year      = {2022},
+  volume    = {54},
+  number    = {1},
+  pages     = {903-937},
+  doi       = {10.1353/nlh.2022.a898333},
+  owner     = {Vincent},
+  timestamp = {2023.08.09},
 }
 
 @Article{Teng2019,
